Fixed image alignment

--- a/projects/aashu/style.css
+++ b/projects/aashu/style.css
@@ -1236,7 +1236,7 @@ body {
   
   
   #slider {
-    width: 700px;
+    max-width: 700px;
     max-height: 500px;
     position: relative;
     overflow: hidden;
@@ -1259,6 +1259,8 @@ body {
   
   #slider img{
     object-fit: contain;
+    max-width: 100%;
+    max-height: 100%;
   }
   
   /* Animation
